--- a/forms/fmconnect.lfm
+++ b/forms/fmconnect.lfm
@@ -1,11 +1,11 @@
 object fmConnect: TfmConnect
-  Left = 532
-  Height = 382
-  Top = 1059
+  Left = 1090
+  Height = 349
+  Top = 1467
   Width = 510
   BorderStyle = bsDialog
   Caption = 'Connect to database...'
-  ClientHeight = 382
+  ClientHeight = 349
   ClientWidth = 510
   Color = clBtnFace
   DesignTimePPI = 144
@@ -16,7 +16,7 @@ object fmConnect: TfmConnect
   LCLVersion = '2.0.12.0'
   object Bevel1: TBevel
     Left = 0
-    Height = 274
+    Height = 242
     Top = 38
     Width = 510
     Align = alTop
@@ -24,130 +24,89 @@ object fmConnect: TfmConnect
   end
   object laUser: TLabel
     Left = 12
-    Height = 20
+    Height = 25
     Top = 98
-    Width = 59
+    Width = 62
     Caption = '&User ID:'
-    FocusControl = DBUserID
-    Font.Color = clWindowText
-    Font.Height = -17
-    Font.Name = 'MS Sans Serif'
+    FocusControl = edUserID
     ParentColor = False
     ParentFont = False
   end
   object laPass: TLabel
     Left = 12
-    Height = 20
+    Height = 25
     Top = 140
-    Width = 73
+    Width = 79
     Caption = '&Password:'
-    FocusControl = DBPasswd
-    Font.Color = clWindowText
-    Font.Height = -17
-    Font.Name = 'MS Sans Serif'
     ParentColor = False
     ParentFont = False
   end
   object laDbName: TLabel
     Left = 12
-    Height = 20
+    Height = 25
     Top = 54
-    Width = 120
-    Caption = 'Database &Name:'
-    FocusControl = DBName
-    Font.Color = clWindowText
-    Font.Height = -17
-    Font.Name = 'MS Sans Serif'
+    Width = 78
+    Caption = '&Database:'
+    FocusControl = edDatabase
     ParentColor = False
     ParentFont = False
   end
   object laHost: TLabel
     Left = 12
-    Height = 20
+    Height = 25
     Top = 183
-    Width = 99
-    Caption = '&Host Name/IP'
-    FocusControl = DBHost
-    Font.Color = clWindowText
-    Font.Height = -17
-    Font.Name = 'MS Sans Serif'
+    Width = 116
+    Caption = '&Host Name/IP:'
+    FocusControl = edHost
     ParentColor = False
     ParentFont = False
   end
   object laPort: TLabel
     Left = 12
-    Height = 20
+    Height = 25
     Top = 225
-    Width = 83
+    Width = 90
     Caption = 'Server &Port:'
-    FocusControl = DBPort
-    Font.Color = clWindowText
-    Font.Height = -17
-    Font.Name = 'MS Sans Serif'
+    FocusControl = edPort
     ParentColor = False
     ParentFont = False
   end
-  object DBUserID: TEdit
+  object edUserID: TEdit
     Left = 144
-    Height = 28
+    Height = 33
     Top = 94
     Width = 350
-    Font.Color = clWindowText
-    Font.Height = -17
-    Font.Name = 'MS Sans Serif'
     ParentFont = False
     TabOrder = 1
   end
-  object DBPasswd: TEdit
+  object edDatabase: TEdit
     Left = 144
-    Height = 28
-    Top = 136
-    Width = 350
-    EchoMode = emPassword
-    Font.Color = clWindowText
-    Font.Height = -17
-    Font.Name = 'MS Sans Serif'
-    ParentFont = False
-    PasswordChar = '*'
-    TabOrder = 2
-  end
-  object DBName: TEdit
-    Left = 144
-    Height = 28
+    Height = 33
     Top = 51
     Width = 350
-    Font.Color = clWindowText
-    Font.Height = -17
-    Font.Name = 'MS Sans Serif'
     ParentFont = False
     TabOrder = 0
   end
-  object DBHost: TEdit
+  object edHost: TEdit
     Left = 144
-    Height = 28
+    Height = 33
     Top = 180
     Width = 350
-    Font.Color = clWindowText
-    Font.Height = -17
-    Font.Name = 'MS Sans Serif'
     ParentFont = False
     TabOrder = 3
   end
-  object DBPort: TEdit
+  object edPort: TEdit
     Left = 144
-    Height = 28
+    Height = 33
     Top = 222
     Width = 350
-    Font.Color = clWindowText
-    Font.Height = -17
-    Font.Name = 'MS Sans Serif'
     ParentFont = False
     TabOrder = 4
   end
-  object OkBtn: TButton
-    Left = 264
+  object btnOk: TButton
+    Left = 265
     Height = 38
-    Top = 328
+    Top = 296
     Width = 112
     Caption = '&OK'
     Default = True
@@ -158,11 +117,12 @@ object fmConnect: TfmConnect
     ParentFont = False
     TabOrder = 5
   end
-  object CancelBtn: TButton
-    Left = 390
+  object btnCancel: TButton
+    Left = 391
     Height = 38
-    Top = 328
+    Top = 296
     Width = 112
+    Cancel = True
     Caption = '&Cancel'
     Font.Color = clWindowText
     Font.Height = -17
@@ -171,7 +131,7 @@ object fmConnect: TfmConnect
     ParentFont = False
     TabOrder = 6
   end
-  object Panel1: TPanel
+  object pnlHeader: TPanel
     Left = 0
     Height = 38
     Top = 0
@@ -192,9 +152,27 @@ object fmConnect: TfmConnect
   object btnTest: TButton
     Left = 12
     Height = 38
-    Top = 256
+    Top = 296
     Width = 113
     Caption = 'Test'
+    Font.Color = clWindowText
+    ParentFont = False
     TabOrder = 8
+  end
+  object edPasswd: TEditButton
+    Left = 144
+    Height = 33
+    Top = 136
+    Width = 350
+    ButtonCaption = '👁️‍🗨️'
+    ButtonWidth = 34
+    EchoMode = emPassword
+    MaxLength = 0
+    NumGlyphs = 1
+    OnButtonClick = edPasswdButtonClick
+    ParentFont = False
+    PasswordChar = '*'
+    TabOrder = 2
+    Text = 'edPasswd'
   end
 end
