[+] implement task adding to a chain, closes #24 [*] set editor style to csDropDownList for Task.Kind column [-] disallow manual editing for Task.Kind column, only drop-down values available

--- a/forms/fmmain.lfm
+++ b/forms/fmmain.lfm
@@ -105,6 +105,7 @@ object fmMain: TfmMain
       ShowHint = True
       TabOrder = 0
       OnDrawColumnCell = gridTasksDrawColumnCell
+      OnSelectEditor = gridTasksSelectEditor
     end
     object splitDetails: TSplitter
       Cursor = crVSplit
