[*] remove unnecessary type casts in qryChains.SQL

--- a/udatamodule.lfm
+++ b/udatamodule.lfm
@@ -40,13 +40,13 @@ object dmPgEngine: TdmPgEngine
       'SELECT'
       '  chain_id,'
       '  task_id,'
-      '  chain_name :: varchar(255) as chain_name,'
-      '  COALESCE(run_at, ''* * * * *'') :: varchar(100) as run_at,'
+      '  chain_name,'
+      '  COALESCE(run_at, ''* * * * *'') as run_at,'
       '  max_instances,'
       '  live,'
       '  self_destruct,'
       '  exclusive_execution,'
-      '  client_name :: varchar(100) as client_name,'
+      '  client_name,'
       '  timeout,'
       '  max_instances'
       'FROM timetable.chain'
